main page icons fix

--- a/app/index.html
+++ b/app/index.html
@@ -134,7 +134,7 @@
         <h2 class="solutions__caption">Solutions</h2>
         <div class="solutions-grid">
 
-          <div class="solutions-grid-box">
+          <div class="solutions-grid-box solutions-grid-box-1">
             <a href="./solutions.html#0" class="solutions-grid-item" (click)="goToSolution(0)">
               <p class="solutions-grid-item__caption">Predictive Maintenance</p>
               <p class="solutions-grid-item__text">
@@ -155,7 +155,7 @@
             <a href="./solutions.html#2" class="solutions-grid-item">
               <p class="solutions-grid-item__caption">Sensor data processing</p>
               <p class="solutions-grid-item__text">
-                <span>Process different</span>
+                <span>Handle different</span>
                 <span>types of sensor data</span>
               </p>
               <p class="solutions-grid-item__link blue-link">Read more</p>
@@ -171,7 +171,7 @@
             </a>
           </div>
 
-          <div class="solutions-grid-box">
+          <div class="solutions-grid-box solutions-grid-box-2">
             <a href="./solutions.html#4" class="solutions-grid-item">
               <p class="solutions-grid-item__caption">
                 <span>Machine</span>
@@ -187,8 +187,8 @@
             <a href="./solutions.html#5" class="solutions-grid-item">
               <p class="solutions-grid-item__caption">Embedded Development</p>
               <p class="solutions-grid-item__text">
-                <span>Low - level</span>
-                <span>programming, PLCs,</span>
+                <span>Low - level programming</span>
+                <span>for sensors, PLCs,</span>
                 <span>and other IoT devices</span>
               </p>
               <p class="solutions-grid-item__link blue-link">Read more</p>
