--- a/app/about-us.html
+++ b/app/about-us.html
@@ -21,6 +21,15 @@
   <meta property="og:title" content="ARS Data">
   <meta property="og:description" content="ARS Data website">
 
+  <!-- Google Analytics -->
+  <script>
+    window.ga = window.ga || function () { (ga.q = ga.q || []).push(arguments) }; ga.l = +new Date;
+    ga('create', 'UA-116482002-1', 'auto');
+    ga("send", "pageview");
+  </script>
+  <script async src='https://www.google-analytics.com/analytics.js'></script>
+  <!-- End Google Analytics -->
+
   <base href="/">
   <link rel="manifest" href="manifest.json">
 
@@ -50,10 +59,10 @@
 
         <div class="navigation-desktop">
           <img src="images/logos/logo-white.svg" alt="ARS Data logo" class="navigation-desktop__logo">
-          <a class="navigation-desktop__item" href="./about-us.html">About us</a>
-          <a class="navigation-desktop__item" href="./solutions.html">Solutions</a>
-          <a class="navigation-desktop__item" href="./technologies.html">Technology</a>
-          <a class="navigation-desktop__item" href="./contacts.html">Contact</a>
+          <a class="navigation-desktop__item nav-about_button" href="./about-us.html">About us</a>
+          <a class="navigation-desktop__item nav-solutions_button" href="./solutions.html">Solutions</a>
+          <a class="navigation-desktop__item nav-technology_button" href="./technologies.html">Technologies</a>
+          <a class="navigation-desktop__item nav-contact_button" href="#contact">Contact</a>
         </div>
       </nav>
     </div>
@@ -81,7 +90,7 @@
             and
             decisions quality.
           </p>
-          <a href="./contacts.html" class="home__startbtn blue-link">Start the project</a>
+          <a href="./contacts.html" class="home__startbtn blue-link start_project_button">Start the project</a>
         </div>
       </div>
     </section>
@@ -126,7 +135,8 @@
               <div class="form-textarea-box">
                 <textarea id="formmessage" name="message" id="message-textarea" cols="30" rows="3"
                   placeholder="Message"></textarea>
-                <button type="submit" class="form-textarea-box__btn" id="submit-button" soul="index-form">Send</button>
+                <button type="submit" class="form-textarea-box__btn send_button" id="submit-button"
+                  soul="index-form">Send</button>
               </div>
 
               <div class="form-radio-box">
