--- a/app/contacts.html
+++ b/app/contacts.html
@@ -21,6 +21,15 @@
   <meta property="og:title" content="ARS Data">
   <meta property="og:description" content="ARS Data website">
 
+  <!-- Google Analytics -->
+  <script>
+    window.ga = window.ga || function () { (ga.q = ga.q || []).push(arguments) }; ga.l = +new Date;
+    ga('create', 'UA-116482002-1', 'auto');
+    ga("send", "pageview");
+  </script>
+  <script async src='https://www.google-analytics.com/analytics.js'></script>
+  <!-- End Google Analytics -->
+
   <base href="/">
   <link rel="manifest" href="manifest.json">
 
@@ -54,7 +63,7 @@
           <img src="images/logos/logo-white.svg" alt="ARS Data logo" class="navigation-desktop__logo">
           <a class="navigation-desktop__item" href="./about-us.html">About us</a>
           <a class="navigation-desktop__item" href="./solutions.html">Solutions</a>
-          <a class="navigation-desktop__item" href="./technologies.html">Technology</a>
+          <a class="navigation-desktop__item" href="./technologies.html">Technologies</a>
           <a class="navigation-desktop__item" href="./contacts.html">Contact</a>
         </div>
       </nav>
@@ -96,9 +105,10 @@
                 placeholder="Message"></textarea>
               <!-- <button class="form-textarea-box__btn" id="submit-button">Send</button> -->
               <div class="flex-between">
-                <button type="submit" class="home__startbtn blue-link" id="submit-button" soul="contacts-form">Send
+                <button type="submit" class="home__startbtn blue-link contact-page-submit-button" id="submit-button"
+                  soul="contacts-form">Send
                   message</button>
-                <span class="home__startbtn blue-link form-success-text">Send message</span>
+                <span class="home__startbtn blue-link form-success-text send_message_button">Send message</span>
                 <span class="home__startbtn blue-link form-error-text">Your message wasn’t sent</span>
               </div>
             </div>
