--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,6 @@
   <script async src='https://www.google-analytics.com/analytics.js'></script>
   <!-- End Google Analytics -->
 
-  <base href="/">
   <link rel="manifest" href="manifest.json">
 
   <!-- build:css css/styles.min.css -->
@@ -283,7 +282,7 @@
             <p class="contact-content-form__text">Send us your questions and we will get back to you as soon as possible
             </p>
 
-            <form class="form" id="contact-form">
+            <form class="form" id="contact-form" method="POST">
               <div class="form-input-box">
                 <input id="formname" name="name" type="text" class="form-input-box__input" type="text"
                   placeholder="Name" required>
@@ -299,8 +298,8 @@
               <div class="form-textarea-box">
                 <textarea id="formmessage" name="message" id="message-textarea" cols="30" rows="3"
                   placeholder="Message"></textarea>
-                <button type="submit" class="form-textarea-box__btn send_button" id="submit-button"
-                  soul="index-form">Send</button>
+                <button type="submit" name="submit_message" class="form-textarea-box__btn send_button"
+                  id="submit-button" soul="index-form">Send</button>
               </div>
 
               <div class="form-radio-box">
@@ -347,9 +346,9 @@
   </div>
 
 
-  <!--build:js js/main.min.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.js"></script>
   <script src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js'></script>
+  <!--build:js js/main.min.js -->
   <script src='js/lib/glide.min.js'></script>
   <script src="js/main.js"></script>
   <!-- endbuild -->
