logic turn to module patter

--- a/app/technologies.html
+++ b/app/technologies.html
@@ -40,7 +40,7 @@
   <link rel="shortcut icon" type="image/png" href="./images/Icon/favicon-16x16.png" />
 </head>
 
-<body>
+<body id="techPage">
   <noscript>
     Website doesn't work when JavaScript disabled. Please enable JavaScript
   </noscript>
