--- a/app/index.html
+++ b/app/index.html
@@ -342,7 +342,7 @@
       By continuing to use the service, you agree to our use of cookies as described in the
       <a target="_blanc" class="cookies-popup-text__link">Cookie Policy</a>.
     </p>
-    <button type="button" class="home__startbtn blue-link" onClick="PopUp('hide')">accept</button>
+    <button type="button" class="home__startbtn blue-link" onClick="ArsModule.handleCookiesPopUp('hide')">accept</button>
   </div>
 
 
