technologies and solutions content fixes

--- a/app/solutions.html
+++ b/app/solutions.html
@@ -109,19 +109,13 @@
                 <div class="slide-content slide-content-1">
                   <h2 class="slide-content__title">Sensor data processing</h2>
                   <p class="slide-content-text">
-                    Handle different types of sensor data: vibration, temperature, pressure, flow, level, proximity,
-                    etc
+                    Process different types of sensor data: vibration, temperature, pressure, flow, level, proximity, etc
                   </p>
                 </div>
                 <div class="slide-content slide-content-2">
                   <img class="slide-content__img slide-content__img_small"
                     src="./images/illustrations/sensor-data-processing.svg"
                     alt="Predictive Maintenance illustration downgrade graphic with limit line">
-                  <p class="slide-content-text">
-                    Filter valuable information from the incoming raw data usign FFT, deadband thresholds and individual
-                    sensor
-                    characteristics like precision, accuracy, sensitivity and resolution.
-                  </p>
                 </div>
               </li>
 
