--- a/app/technologies.html
+++ b/app/technologies.html
@@ -81,13 +81,12 @@
                 <div class="slide-content slide-content-1">
                   <h2 class="slide-content__title">Embedded</h2>
                   <p class="slide-content-text">
-                    <span class="slide-content-text__part">Predict the future health of equipment or an asset.</span>
-                    <span class="slide-content-text__part">Estimate Remaining Useful Life (RUL).</span>
-                    <span class="slide-content-text__part">Anticipate failure and performance degradation risks.</span>
+                    <span class="slide-content-text__part">Firmware development for different IoT devices.</span>
+                    <span class="slide-content-text__part">Wireless communication solutions</span>
                   </p>
                 </div>
                 <div class="slide-content slide-content-2">
-                  <img class="slide-content__img" src="./images/illustrations/embedded.png"
+                  <img class="slide-content__img" src="./images/technology/embeded-logos.png"
                     alt="Predictive Maintenance illustration downgrade graphic with limit line">
                 </div>
               </li>
@@ -96,13 +95,12 @@
                 <div class="slide-content slide-content-1">
                   <h2 class="slide-content__title">Computation</h2>
                   <p class="slide-content-text">
-                    <span class="slide-content-text__part">Predict the future health of equipment or an asset.</span>
-                    <span class="slide-content-text__part">Estimate Remaining Useful Life (RUL).</span>
-                    <span class="slide-content-text__part">Anticipate failure and performance degradation risks.</span>
+                    <span class="slide-content-text__part">Distributed systems for real-time and batch data
+                      processing</span>
                   </p>
                 </div>
                 <div class="slide-content slide-content-2">
-                  <img class="slide-content__img" src="./images/illustrations/computation.png"
+                  <img class="slide-content__img" src="./images/technology/computation-logos.png"
                     alt="Predictive Maintenance illustration downgrade graphic with limit line">
                 </div>
               </li>
@@ -111,13 +109,11 @@
                 <div class="slide-content slide-content-1">
                   <h2 class="slide-content__title">Storage</h2>
                   <p class="slide-content-text">
-                    <span class="slide-content-text__part">Predict the future health of equipment or an asset.</span>
-                    <span class="slide-content-text__part">Estimate Remaining Useful Life (RUL).</span>
-                    <span class="slide-content-text__part">Anticipate failure and performance degradation risks.</span>
+                    <span class="slide-content-text__part">Database solutions to store and access collected data</span>
                   </p>
                 </div>
                 <div class="slide-content slide-content-2">
-                  <img class="slide-content__img" src="./images/illustrations/storage.png"
+                  <img class="slide-content__img" src="./images/technology/storage-logos.png"
                     alt="Predictive Maintenance illustration downgrade graphic with limit line">
                 </div>
               </li>
@@ -126,13 +122,13 @@
                 <div class="slide-content slide-content-1">
                   <h2 class="slide-content__title">Modeling</h2>
                   <p class="slide-content-text">
-                    <span class="slide-content-text__part">Predict the future health of equipment or an asset.</span>
-                    <span class="slide-content-text__part">Estimate Remaining Useful Life (RUL).</span>
-                    <span class="slide-content-text__part">Anticipate failure and performance degradation risks.</span>
+                    <span class="slide-content-text__part">Data Science tools to extract valuable information</span>
+                    <span class="slide-content-text__part">from the raw data. Model equipment or asset behavior</span>
+                    <span class="slide-content-text__part">to predict the system state in future</span>
                   </p>
                 </div>
                 <div class="slide-content slide-content-2">
-                  <img class="slide-content__img" src="./images/illustrations/modelling.png"
+                  <img class="slide-content__img" src="./images/technology/modeling-logos.png"
                     alt="Predictive Maintenance illustration downgrade graphic with limit line">
                 </div>
               </li>
@@ -141,13 +137,11 @@
                 <div class="slide-content slide-content-1">
                   <h2 class="slide-content__title">Visualization</h2>
                   <p class="slide-content-text">
-                    <span class="slide-content-text__part">Predict the future health of equipment or an asset.</span>
-                    <span class="slide-content-text__part">Estimate Remaining Useful Life (RUL).</span>
-                    <span class="slide-content-text__part">Anticipate failure and performance degradation risks.</span>
+                    <span class="slide-content-text__part">Graphical representation of data and information</span>
                   </p>
                 </div>
                 <div class="slide-content slide-content-2">
-                  <img class="slide-content__img" src="./images/illustrations/computation.png"
+                  <img class="slide-content__img" src="./images/technology/visualization-logos.png"
                     alt="Predictive Maintenance illustration downgrade graphic with limit line">
                 </div>
               </li>
